# database-opt

backup/: docker-compose.yml  readme.md
backup/backup/cdp/: backup.sh
backup/backup/diff/: backup.sh
backup/backup/full/: backup.sh
backup/backup/incr/: backup.sh
backup/backup/reverse_delta/: backup.sh
replication/: docker-compose.yml  master.cnf  master.sql  pyproject.toml  readme.md  slave.cnf  slave.sql  spamming.py
replication/mysql/: mysql-bin.000001  mysql-bin.000002  mysql-bin.000003  mysql-bin.000004  mysql-bin.000005  mysql-bin.000006  mysql-bin.000007  mysql-relay-bin.000003  mysql-relay-bin.000004  mysql-relay-bin.index
sharding/: books.py  citus.sql  docker-compose.yml  horizontal.sql  measure.py  pyproject.toml  readme.md  vertical.sql
